[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "censored-survivors"
version = "0.1.0"
description = "Survival analysis for customer churn prediction using proxy indicators"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.2.0,<1.4.0",
    "lifelines>=0.27.0",
    "torch>=2.0.0",
    "pydantic>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",  # Data visualization
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

docs = [
    "pdoc>=15.0.1",
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
    "myst-parser>=2.0.0",
]

all = [
    "censored-survivors[dev,docs]",
]

[tool.ruff]
line-length = 88 